--- a/DeliveryGrig.Api/DeliveryGrig.Api.csproj
+++ b/DeliveryGrig.Api/DeliveryGrig.Api.csproj
@@ -8,15 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+    <Folder Include="wwwroot\data_files\" />
   </ItemGroup>
 
 </Project>
