Сделал логирование в файл

--- a/DeliveryGrig.Api/DeliveryGrig.Api.csproj
+++ b/DeliveryGrig.Api/DeliveryGrig.Api.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="logs\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="wwwroot\data_files\screenshot_test_api_ui.PNG" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
