--- a/DeliveryGrig.Api/appsettings.json
+++ b/DeliveryGrig.Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "PathToResultRecords": {
+    "_deliveryOrder": "result_data.txt"
+  },
+  "FilteringParams": {
+    "_cityDistrict": "Nord300",
+    "_firstDeliveryDateTime": "2024-10-05 19:20:31"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
