--- a/DeliveryGrig.Api/appsettings.json
+++ b/DeliveryGrig.Api/appsettings.json
@@ -1,10 +1,10 @@
 {
   "PathToResultRecords": {
-    "_deliveryOrder": "result_data.txt"
+    "_deliveryOrder": ".\\result_dir\\result_data.txt"
   },
   "FilteringParams": {
-    "_cityDistrict": "Nord300",
-    "_firstDeliveryDateTime": "2024-10-05 19:20:31"
+    "_cityDistrict": "",
+    "_firstDeliveryDateTime": ""
   },
   "Logging": {
     "LogLevel": {
